syntax = "proto3";
import "type.proto";

option java_package = "com.vpclub.bait.busticket.api";
option java_outer_classname = "BusStationInfoProto";

message BusStationInfoDTO {

    //主键

}
message BusStationInfoRequest {
    Integer pageNumber = 1;
    Integer pageSize = 2;
    //名称
    string origin = 3;
    string stationName = 4;

}
message BusStationInfoResponse {
    Integer returnCode = 1;
    string message = 2;
    BusStationInfoDTO dataInfo = 3;
}

service BusStationInfoRpcService {
    rpc queryByOriginAndStationName (BusStationInfoRequest) returns (BusStationInfoResponse) {
    }
}



