syntax = "proto3";
import "type.proto";

option java_package = "com.vpclub.bait.lifepayment.api";
option java_outer_classname = "SensitiveWordInfoProto";

message SensitiveWordInfoDTO {
    //主键
    string content = 1;

}
message SensitiveWordInfoRequest {
    Integer pageNumber = 1;
    Integer pageSize = 2;
}
message SensitiveWordInfoResponse {
    Integer returnCode = 1;
    string message = 2;
    SensitiveWordInfoDTO dataInfo = 3;
}

service SensitiveWordInfoRpcService {
    rpc queryAll (SensitiveWordInfoRequest) returns (SensitiveWordInfoResponse) {
    }
}



