syntax = "proto3";
import "type.proto";

option java_package = "com.vpclub.bait.busticket.api";
option java_outer_classname = "SiteInfoProto";

message SiteInfoDTO {

    //主键
    string site = 1;

}
message SiteInfoRequest {
    Integer pageNumber = 1;
    Integer pageSize = 2;
    //名称
    string origin = 3;

}
message SiteInfoResponse {
    Integer returnCode = 1;
    string message = 2;
    SiteInfoDTO dataInfo = 3;
}

service SiteInfoRpcService {
    rpc query (SiteInfoRequest) returns (SiteInfoResponse) {
    }
}



